@@ -53,7 +53,7 @@ void MapManager::LoadTransports()
         uint32 period = fields[3].GetUInt32();
         uint32 scriptId = sObjectMgr->GetScriptId(fields[4].GetCString());
 
-        const GameObjectTemplate* goinfo = sObjectMgr->GetGameObjectTemplate(entry);
+        GameObjectTemplate const* goinfo = sObjectMgr->GetGameObjectTemplate(entry);
 
         if (!goinfo)
         {
@@ -87,7 +87,7 @@ void MapManager::LoadTransports()
         float o = 1.0f;
 
          // creates the Gameobject
-        if (!t->Create(lowguid, entry, mapid, x, y, z, o, 100, 0))
+        if (!t->Create(lowguid, entry, mapid, x, y, z, o, 255, 0))
         {
             delete t;
             continue;
@@ -296,8 +296,7 @@ bool Transport::Create(uint32 guidlow, uint32 entry, uint32 mapid, float x, floa
     SetFloatValue(OBJECT_FIELD_SCALE_X, goinfo->size);
 
     SetUInt32Value(GAMEOBJECT_FACTION, goinfo->faction);
-    //SetUInt32Value(GAMEOBJECT_FLAGS, goinfo->flags);
-    SetUInt32Value(GAMEOBJECT_FLAGS, MAKE_PAIR32(0x28, 0x64));
+    SetUInt32Value(GAMEOBJECT_FLAGS, goinfo->flags);
     SetUInt32Value(GAMEOBJECT_LEVEL, m_period);
     SetEntry(goinfo->entry);
 
